--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.10.2",
     "eslint": "^9.16.0",
     "fastify": "^5.1.0",
+    "reflect-metadata": "^0.2.2",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
